--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,6 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Install frontend dependencies
-        run: npm install
+        run: cd client-app
+            npm install
           
