--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Install frontend dependencies
-        run: cd client-app
-            npm install
+        run: |
+          cd client-app
+          npm install
           
