--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,16 @@ jobs:
       image: python:3.10-slim
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
@@ -25,7 +35,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Install frontend dependencies
-        run: 
+        run: | 
           cd client-app
           npm install
           
