--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
           node-version: '14'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          cd client-app
+          npm ci
 
       - name: Run tests
         run: npm test
