--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,18 @@ name: Manual-Workflow-test
 # Controls when the workflow will run
 on: 
   # Allows you to run this workflow manually from the Actions tab
+  
   workflow_dispatch:
+    #Inputs the workflow accepts.
+    inputs:
+      name:
+      #Friendly description to be shown in the UI instead of 'name'
+      description: 'Person to greet'
+      #Default value if no value is explicitly provided
+      default: 'World'
+      #Input has to be provided for the workflow to run
+      required: true
+    
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
