--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,16 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  #This job will use input parameters to greet
+  greet:
+    #The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    #Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    #Runs a single command using the runners shell
+    - name: Send greeting
+      run: echo "Hello ${{ github.event.inputs.name }}"
+  
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
