--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Install frontend dependencies
-        run: | 
+        run:  
           cd client-app
           npm install
           
