--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,15 +43,18 @@ jobs:
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}"
       
-    #This job will take login input parameters to be used at a later point
-    login:
+  #This job will take login input parameters to be used at a later point
+  login:
       #The type of runner that the job will run on
       runs-on: ubuntu-latest
       #Steps represent a sequence of tasks that will be executed as part of the job
       steps:
       #Prints theoretical login command
       - name: Login
-        run: echo ""
+        run: echo "github.event.inputs.author_name"
+      #Prints theoretical password command
+      - name: Password
+        run: echo "github.event.inputs.author_email"
       
   
   # This workflow contains a single job called "build"
