--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,16 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  #This job will use input parameters to configure default package
+  package_configuration:
+     #The type of runner that the job will run on
+      runs-on: ubuntu-latest
+      #Steps represent a sequence of tasks that will be executed as part of the job
+      steps:
+      #Runs a single command using the runners shell
+        #Replaces all instances of PROJECT_NAME from pyproject.toml with input
+        -name: Replace Project Name
+          run: sed -i "s/AUTHOR_NAME/github.event.inputs.author_name/g" pyproject.toml
   #This job will use input parameters to greet
   greet:
     #The type of runner that the job will run on
